# TamilTokenizers

./: .gitignore  Dockerfile  EDA.ipynb  Makefile  README.md  app.py  pyproject.toml  requirements.txt  server.py  train.py
.devcontainer/: devcontainer.json
data/: corpus_create.py  download_html.py
minbpe/: __init__.py  base.py  basic.py  regexs.py  test_tokenizer.py
models/: regex.model  regex.vocab
