[project]
name = "tamiltokenizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "gradio>=6.9.0",
    "pydantic>=2.12.5",
    "regex>=2026.2.28",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]

[tool.ruff]
# Set line length
line-length = 88
# Set minimum Python version
target-version = "py38"
# Exclude specific directories
exclude = [
    ".bzr",
    ".direnv", 
    ".eggs",
    ".git",
    ".venv",
    "__pycache__",
    "node_modules",
]
[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
]
# Ignore specific rules
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]
# Allow fixing specific rules
fixable = ["ALL"]
unfixable = []
[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Use trailing commas
skip-magic-trailing-comma = false
# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google" 

